--- a/HTML_Task05.CSS
+++ b/HTML_Task05.CSS
@@ -58,12 +58,14 @@
 			background-color: white;
 			padding: 20px;
 			margin-bottom: 20px;
+			box-shadow: 2px 3px 2px 1px #888888;
 		}
 
 		.left_02{
 			background-color: white;
 			padding: 20px;
 			margin-bottom: 20px;
+			box-shadow: 2px 3px 2px 1px #888888;
 		}
 
 		.left_02 ul{
@@ -78,6 +80,7 @@
 			background-color: white;
 			padding: 20px;
 			margin-bottom: 20px;
+			box-shadow: 2px 3px 2px 1px #888888;
 		}
 
 		.image figure{
@@ -111,6 +114,7 @@
 			padding: 20px;
 			margin-bottom: 20px;
 			clear: both;
+			box-shadow: 2px 3px 2px 1px #888888;
 		}
 
 		.left_04 ol{
